--- a/CSS/style.css
+++ b/CSS/style.css
@@ -128,6 +128,7 @@ main {
     padding: 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    margin-top: 50px;
 }
 
 #products-section {
@@ -305,7 +306,6 @@ main {
     }
 
     #nav-links {
-        flex-direction: column;
         margin-top: 10px;
     }
 
@@ -313,7 +313,9 @@ main {
         margin-right: 0;
         margin-bottom: 10px;
     }
-
+    #search-input {
+        display: none;
+    }
     .product-card {
         width: calc(50% - 20px);
         margin-left: 0;
